Fix blurry images
Fix issue #8

--- a/hexagons.css
+++ b/hexagons.css
@@ -2,7 +2,6 @@
     margin: 0;
     padding: 0;
 }
-
 body {
     background: rgb(123, 158, 158);
     font-family: 'Raleway', sans-serif;
@@ -15,13 +14,11 @@ body {
     padding:0.866% 0;
     font-size: 15px;
 }
-
 #hexGrid:after {
     content: "";
     display: block;
     clear: both;
 }
-
 .hex {
     position: relative;
     list-style-type: none;
@@ -33,13 +30,11 @@ body {
         -ms-transform: rotate(-60deg) skewY(30deg) translatez(-1px);
             transform: rotate(-60deg) skewY(30deg) translatez(-1px);
 }
-
 .hex * {
     position: absolute;
     visibility: visible;
     outline:1px solid transparent; /* fix for jagged edges in FF on hover transition */
 }
-
 .hexIn {
     display:block;
     width: 100%;
@@ -52,32 +47,23 @@ body {
             transform: skewY(-30deg) rotate(60deg);
 }
 
-
-/* HEX CONTENT */
-
+/*** HEX CONTENT **********************************************************************/
 .hex img {
     left: -100%;
     right: -100%;
     width: auto;
     height: 100%;
     margin: 0 auto;
-    -webkit-transform: translatez(-1px);
-        -ms-transform: translatez(-1px);
-            transform: translatez(-1px);
 }
-
 .hex h1, .hex p {
-    width: 102%;
-    left:-1%; /* prevent line on the right where background doesn't cover image */
+    width: 100%;
     padding: 5%;
     box-sizing:border-box;
     background-color: rgba(0, 128, 128, 0.8);
     font-weight: 300;
     -webkit-transition:  -webkit-transform .2s ease-out, opacity .3s ease-out;
             transition:          transform .2s ease-out, opacity .3s ease-out;
-    -webkit-font-smoothing: subpixel-antialiased; /* fix for font antialiasing after hover transition */
 }
-
 .hex h1 {
     bottom: 50%;
     padding-top:50%;
@@ -87,7 +73,6 @@ body {
         -ms-transform:translateY(-100%) translatez(-1px);
             transform:translateY(-100%) translatez(-1px);
 }
-
 .hex h1:after {
     content: '';
     position: absolute;
@@ -97,7 +82,6 @@ body {
     text-align: center;
     border-bottom: 1px solid #fff;
 }
-
 .hex p {
     top: 50%;
     padding-bottom:50%;
@@ -106,25 +90,16 @@ body {
             transform:translateY(100%) translatez(-1px);
 }
 
-
-/* HOVER EFFECT  */
-
-
-.hexIn:hover h1, .hexIn:focus h1 {
+/*** HOVER EFFECT  **********************************************************************/
+.hexIn:hover h1, .hexIn:focus h1,
+.hexIn:hover p, .hexIn:focus p{
     -webkit-transform:translateY(0%) translatez(-1px);
         -ms-transform:translateY(0%) translatez(-1px);
             transform:translateY(0%) translatez(-1px);
 }
 
-.hexIn:hover p, .hexIn:focus p {
-    -webkit-transform:translateY(0%) translatez(-1px);
-        -ms-transform:translateY(0%) translatez(-1px);
-            transform:translateY(0%) translatez(-1px);
-}
-
-/* SPACING AND SIZING */
-
-@media (min-width:1201px) {
+/*** SPACING AND SIZING *****************************************************************/
+@media (min-width:1201px) { /* <- 5-4  hexagons per row */
     .hex {
         width: 19.2%; /* = (100-4) / 5 */
         padding-bottom: 22.170%; /* =  width / sin(60deg) */
@@ -163,8 +138,7 @@ body {
         margin-right: 1%;
     }
 }
-
-@media (max-width: 1200px) and (min-width:901px) {
+@media (max-width: 1200px) and (min-width:901px) {/* <- 4-3  hexagons per row */
     .hex {
         width: 24.25%; /* = (100-3) / 4 */
         padding-bottom: 28.001%; /* =  width / sin(60deg) */
@@ -199,8 +173,7 @@ body {
         margin-left: 0.5%;
     }
 }
-
-@media (max-width: 900px) and (min-width:601px) {
+@media (max-width: 900px) and (min-width:601px) {/* <- 3-2  hexagons per row */
     .hex {
         width: 32.666%; /* = (100-2) / 3 */
         padding-bottom: 37.720%; /* =  width / sin(60) */
@@ -229,8 +202,7 @@ body {
         clear: left;
     }
 }
-
-@media (max-width: 600px) {
+@media (max-width: 600px) {/* <- 2-1  hexagons per row */
     .hex {
         width: 49.5%; /* = (100-1) / 2 */
         padding-bottom: 57.158%; /* =  width / sin(60) */
@@ -261,7 +233,7 @@ body {
     }
 }
 
-/*** Buttons for demo ***/
+/*** Buttons for demo ******************************************************************/
 #share{
     position:fixed;
     left:0; top:0;
